update pack_format to 12 regenerated storage and stair packs added fast crafting

--- a/expected_storage_blocks/data/axa_expected_storage_blocks/recipes/snowball_from_snow_block.json
+++ b/expected_storage_blocks/data/axa_expected_storage_blocks/recipes/snowball_from_snow_block.json
@@ -1,6 +1,5 @@
 {
   "type": "minecraft:crafting_shapeless",
-  "group": "snowball",
   "ingredients": [
     {
       "item": "minecraft:snow_block"
@@ -9,5 +8,6 @@
   "result": {
     "item": "minecraft:snowball",
     "count": 4
-  }
+  },
+  "group": "snowball"
 }
