reimplement uncraft storage blocks generation for 1.21.4

--- a/packs/uncraft_storage_blocks/data/uncraft_storage_blocks/recipe/snowball_from_snow_block.json
+++ b/packs/uncraft_storage_blocks/data/uncraft_storage_blocks/recipe/snowball_from_snow_block.json
@@ -3,12 +3,10 @@
   "category": "misc",
   "group": "snowball",
   "ingredients": [
-    {
-      "item": "minecraft:snow_block"
-    }
+    "minecraft:snow_block"
   ],
   "result": {
-    "item": "minecraft:snowball",
-    "count": 4
+    "count": 4,
+    "id": "minecraft:snowball"
   }
 }
